# dev-team

./: .geminiignore  .gitignore  .gitleaksignore  .mcp.json  AGENT-IMPROVEMENT-PLAN.md  AGENT-IMPROVEMENTS-LOG.md  AGENTS-QUICKSTART.md  BUDDY-SETUP.md  CHANGELOG.md  CLAUDE.md  GLOBAL-AGENTS-SETUP.md  KNOWLEDGE-SETUP-COMPLETE.md  LICENSE  README.md  SETUP-COMPLETE-SUMMARY.md  TODO.md  agent.md  biome.json  buddy  package-lock.json  package.json  settings.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.gemini/: GEMINI.md  agent.json  agent.md  settings.json
.gemini/launcher/: Cargo.toml  IMPROVEMENTS.md  README.md  STATS.md  SUMMARY.md  install.sh  test-interactive.toml
.gemini/launcher/src/: main.rs
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
_summaries/: README.md
agents/: agent-builder.md  backend-developer.md  cloud-architect.md  database-admin.md  devops-engineer.md  frontend-developer.md  github-manager.md  ml-engineer.md  pentaster.md  pentester.md  product-manager.md  qa-tester.md  security-analyst.md  system-architect.md  ui-ux-designer.md
commands/: buddy.md  dashboard.md
dashboard/: ARCHITECTURE.md  PRD.md  README.md  UX-SPEC.md  package.json
doc/: MCP_Workflow_Explanation.md  api-reference.md  introduction.md  tutorial.md
docs/: README.md  agents.md  architecture.md  buddy.md  contributing.md  create-agent.md  task-tracker.md
knowledge/: README.md  coding-standards.md  git-conventions.md  task-tracker-api.md
launcher/: Cargo.toml  NEXT_STEPS.md  PORTABLE_PLAN.md  launcher.toml
(+644 files in other folders)
